--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promo-codes-worker",
+  "name": "firebase-worker",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -12,5 +12,7 @@
     "typescript": "latest",
     "wrangler": "latest"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@dobuki/firebase-store": "^1.0.7"
+  }
 }
